fix frog spacing and footer bg for smaller viewport

--- a/assets/css/frog-styles.css
+++ b/assets/css/frog-styles.css
@@ -11,6 +11,7 @@
     background: radial-gradient(ellipse at top left, rgba(127, 201, 113, 1), rgba(79, 161, 64, 1));
     border-radius: 80% 100%;
     box-shadow: 3px 3px rgba(0, 0, 0, 0.3);
+    margin-bottom: 3em;
   }
   
   .lilypad-divot {
